# music-player

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  app.sln
app/app.Client/: Program.cs  Startup.cs  _ViewImports.cshtml  app.Client.csproj
app/app.Client/Controllers/: PlayerController.cs
app/app.Client/Pages/: Index.cshtml  Likes.cshtml  Playlists.cshtml
app/app.Client/Shared/: MainLayout.cshtml  NavMenu.cshtml  Player.cshtml  TrackData.cshtml  TrackList.cshtml
app/app.Client/Utilities/: UrlManager.cs
app/app.Client/wwwroot/: index.html
app/app.Client/wwwroot/css/: player.css  playlist.css  search.css  site.css  tracklist.css
app/app.Client/wwwroot/js/: main.js  player.js
app/app.Server/: CustomeJwtDataFormat.cs  Program.cs  Startup.cs  app.Server.csproj
app/app.Server/Controllers/: AuthController.cs  FetchDataController.cs  LikesController.cs  PlaylistController.cs  SearchController.cs  UserController.cs
app/app.Server/DataAccess/: DataIO.cs
app/app.Shared/: app.Shared.csproj
app/app.Shared/Models/: Playlist.cs  SearchResult.cs  Track.cs  User.cs
data/: Cargo.toml  Dockerfile  db.sh
data/src/: main.rs  utils.rs
data/src/controllers/: db.rs  handler.rs
data/src/models/: like.rs  mod.rs  playlist.rs  provider.rs  track.rs  user.rs
db/: likes.sql  playlistitems.sql  playlists.sql  providers.sql  tracks.sql  users.sql
search/: Dockerfile  requirements.txt
search/src/api/: main.py  utils.py
search/src/api/controllers/: __init__.py  credential.py  soundcloud.py  youtube.py
web/: default.conf
(+1 files in other folders)
