[package]
name = "data"
version = "0.1.0"
authors = ["altescy <altescy@gmail.com>"]

[dependencies]
iron = "0.6.0"
mysql = "14.0.0"
router = "0.6.0"
rustc-serialize = "0.3.24"
r2d2 = "0.8.3"
params = "0.8.0"
persistent = "0.4.0"

[dependencies.chrono]
version = "0.4.6"
features = ["rustc-serialize"]

[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version="9.0.0"
